@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.109 2013/03/30 17:02:32 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.110 2013/03/31 21:18:56 mgorny Exp $
+
+  31 Mar 2013; Michał Górny <mgorny@gentoo.org> systemd-200.ebuild,
+  systemd-9999.ebuild:
+  Obtain PAM moduledir from pam.eclass.
 
   30 Mar 2013; Mike Gilbert <floppym@gentoo.org> systemd-200.ebuild,
   systemd-9999.ebuild:
